# dcolmex

./: README.md
Source/: CMakeLists.txt  ComplexityMeasures.cpp  ComplexityMeasures.h  Dataset.cpp  Dataset.h  ExtendedDataset.cpp  ExtendedDataset.h  Main.cpp  Main_mex.cpp  Main_mex_ori.cpp  Matrix.cpp  Matrix.h  Statistics.cpp  Utils.cpp  Utils.h  dcol
Source/DistanceFunctions/: NormalizedEuclideanFunction.h
Source/Test/: abalone.arff.2c0  abalone.arff.2c1  abalone.arff.2c2  abalone.matlab  abalone.txt  abalone_ori.arff  abalone_result_2c0_ori.txt  arrhythmia.arff  australian.arff  australian_na.arff  automobile.arff  automobile.arff.2c0  automobile.arff.2c1  automobile.arff.2c2  automobile.arff.2c3  automobile.arff.2c4  automobile.arff.2c5  automobile.matlab  automobile.txt  cardio10.arff  contraceptive.arff  current1.matlab  current1.tex  current1.txt  current1_result_ori.txt  data1.arff  data1.txt  grammatical_a4.arff  grammatical_a4.matlab  grammatical_b4.arff  grammatical_b4.txt  grammatical_b9.arff  iris.arff.2c0  iris.arff.2c0.txt  iris.arff.2c0.txt.bk  iris.arff.2c1  iris.arff.2c2  iris.matlab  iris.txt  iris_1c.arff  (+5 more)
Source/buildori/: CMakeCache.txt  Makefile  cmake_install.cmake  dcol
Source/buildori/dcol.dSYM/Contents/: Info.plist
Source/buildori/dcol.dSYM/Contents/Resources/DWARF/: dcol
Source/cuda/: dmat.cu  dmat.h  test  test.cpp
mex/: audiology_std.mat  build_mac.m  build_mac_simple.m  build_massive.m  build_mcc.m  build_monarch.m  build_windows.m  dcol.cpp  dcol.mexmaci64  dcol_ori.cpp  dcol_ori.mexmaci64  test.m  test2.m  test_mem.m  tic_t.csv
mex/dcol.mexmaci64.dSYM/Contents/: Info.plist
mex/dcol.mexmaci64.dSYM/Contents/Resources/DWARF/: dcol.mexmaci64
